# cu-numbers

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  INTRODUCTION.md  LICENSE  LICENSE.ru  README.md  cu-numbers.py  setup.cfg  setup.py
.github/workflows/: black.yml  test-python-3.0.yml  test-python-3.5.yml  test-python-3.7.yml
cunumbers/: __init__.py  cunumbers.py  cunumbers_plain.py  dictionary.py
docs/: CHANGELOG.md  CHANGELOG.ru.md  INTRODUCTION.md  INTRODUCTION.ru.md  LICENSE  LICENSE.ru  README.md  README.ru.md
omninumeric/: __init__.py  omninumeric.py
omninumeric/cyrillic/: __init__.py  cyrillic.py
omninumeric/greek/: __init__.py  greek.py  old.py
omninumeric/greek/old/: __init__.py  old.py
omninumeric/roman/: __init__.py  roman.py
tests/: test_cunumbers.py  test_cyrillic.py  test_roman.py
