[metadata]
name = omninumeric
version = 1.0.0
author = Andrei Shur
author_email = amshoor@gmail.com
description = Convert numbers between Arabic and alphabetic numeral systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/endrain/omninumeric
keywords = church slavonic, conversion
license = MIT
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Religion
	Intended Audience :: Science/Research

[options]
include_package_data = True
packages =
	omninumeric
	cyrillic
python_requires = >=3.4